fixed alignment on contact info, finished section title styles

--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,6 @@ header nav ul li a, #contact-me ul li a {
 /* Start Header Style */
 
 header {
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     background: var(--not-quite-black);
@@ -101,9 +100,8 @@ header nav ul li a {
 
 /* Start Section Style */
 
-#about-me, #work, #contact-me {
+.content-section {
     color: var(--dark-blue);
-    display: flex;
     justify-content: flex-start;
     margin: 29px 93px;
 }
@@ -112,7 +110,7 @@ header nav ul li a {
     border-right: 4px solid var(--dark-blue);
     padding-right: 16px;
     margin-right: 37px;
-    flex: 1 15%;
+    width: 170px
 }
 
 .section-title h2 {
@@ -137,7 +135,6 @@ article p {
 /* Start Work Style */
 
 #work article{
-    display: flex;
     flex-wrap: wrap;
     align-content: space-between;
 }
@@ -148,7 +145,7 @@ article p {
     height: 160px;
     width: 100%;
     margin: 6px;
-    flex: 1 3 48.84%;
+    flex: 1 3 50%;
     overflow: hidden;
 
 }
@@ -190,14 +187,14 @@ article p {
 /* Start Contact Style */
 
 #contact-me article ul {
-    display: flex;
-    margin-top: 35px;
-    align-content: space-around;
+    margin-top: 30px;
+    justify-content: space-evenly;
 }
 
 #contact-me article ul li a {
     color: var(--dark-blue);
     border-bottom: 4px solid var(--dark-blue);
+    line-height: 2;
 }
 
 /* End Contact Style */
